--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Home</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,6 +45,7 @@
                         <span class="visually-hidden">New alerts</span>
                     </span>
             </div>
+            <a href="./dang nhap, dang ki/register.html">Register</a>
         </div>
     </nav>
 
@@ -64,6 +65,7 @@
                         <h5 class="card-title">Apple Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -75,6 +77,7 @@
                         <h5 class="card-title">Apple iPhone 14 Pro Max 128GB VN/A Like New</h5>
                         <span class="phone-Value text-primary">25000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">30000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -85,6 +88,7 @@
                         <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -95,6 +99,7 @@
                         <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -105,6 +110,7 @@
                         <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -115,6 +121,7 @@
                         <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -125,6 +132,7 @@
                         <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -135,6 +143,7 @@
                         <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
                         <span class="phone-Value text-primary">29000000</span>
                         <span class="phone-Exvalue text-decoration-line-through">32000000</span>
+                        <button class="btn btn-primary">Buy product</button>
                     </div>
                 </div>
             </div>
@@ -143,7 +152,7 @@
             <b>New Post</b>
             <div class="row">
                 <div class="col-4">
-                    <div class="1stpost">
+                    <div class="fstpost">
                         <img class="postImg"
                             src="post-img/nen-mua-iphone-14-pro-max-like-new-hay-iphone-14-pro-social.png" alt="">
                         <div class="postInfo">
@@ -152,7 +161,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="1stpost">
+                    <div class="fstpost">
                         <img class="postImg"
                             src="post-img/cung-tim-hieu-cach-quay-video-4k-tren-iphone-don-gian-va-hieu-qua-voi-hnammobile-social.png">
                         <div class="postInfo">
@@ -161,7 +170,36 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="1stpost">
+                    <div class="fstpost">
+                        <img class="postImg"
+                            src="post-img/nen-mua-iphone-14-pro-max-like-new-hay-iphone-14-pro-social.png" alt="">
+                        <div class="postInfo">
+                            Should we buy iPhone 14 Pro Max Like New or iPhone 14 Pro
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="fstpost">
+                        <img class="postImg"
+                            src="post-img/nen-mua-iphone-14-pro-max-like-new-hay-iphone-14-pro-social.png" alt="">
+                        <div class="postInfo">
+                            Should we buy iPhone 14 Pro Max Like New or iPhone 14 Pro
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="fstpost">
+                        <img class="postImg"
+                            src="post-img/cung-tim-hieu-cach-quay-video-4k-tren-iphone-don-gian-va-hieu-qua-voi-hnammobile-social.png">
+                        <div class="postInfo">
+                            Should we buy iPhone 14 Pro Max Like New or iPhone 14 Pro
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="fstpost">
                         <img class="postImg"
                             src="post-img/nen-mua-iphone-14-pro-max-like-new-hay-iphone-14-pro-social.png" alt="">
                         <div class="postInfo">
