--- a/dang nhap, dang ki/register.html
+++ b/dang nhap, dang ki/register.html
@@ -15,32 +15,32 @@
 </head>
 
 <body>
-  <div style="width: 500px;" class="mx-auto mt-5 body">
-    <div class="container">
-      <form id="signup-form">
-        <h2>Sign up</h2>
-        <div class="form-group my-2">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" required>
-        </div>
-        <div class="form-group my-2">
-          <label for="phone">Số điện thoại:</label>
-          <input type="tel" class="form-control" id="phone" required>
-        </div>
-        <div class="form-group my-2">
-          <label for="password">Mật khẩu:</label>
-          <input type="password" class="form-control" id="password" required>
-        </div>
-        <div class="form-group my-2">
-          <label for="address">Địa chỉ giao hàng:</label>
-          <input type="text" class="form-control" id="address" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Đăng ký</button>
-        <a class="ms-4" href="login.html">Already had an account? Click here</a>
-      </form>
+  <div class="body">
+    <div class="container my-auto">
+      <h2>Sign up</h2>
+      <div class="form-group my-2">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email" required>
+      </div>
+      <div class="form-group my-2">
+        <label for="phone">Phone number:</label>
+        <input type="tel" class="form-control" id="phone" required>
+      </div>
+      <div class="form-group my-2">
+        <label for="password">Password:</label>
+        <input type="password" class="form-control" id="password" required>
+      </div>
+      <div class="form-group my-2">
+        <label for="address">Delivery address:</label>
+        <input type="text" class="form-control" id="address" required>
+      </div>
+      <button type="submit" class="btn btn-primary button"><b>Create Account</b></button>
+      <a class="ms-4" href="login.html">Already had an account? Click here</a>
+
     </div>
     <div class="image">
-      <img src="bg img/images.jpg" alt="">
+      <h2 class="mx-auto" style="color: white"><b>Create account to get a free iPhone 12</b></h2>
+      <img src="bg img/apple-iphone-12_400d61f3-6068-44b6-93d2-237949755465.webp" alt="">
     </div>
   </div>
 
