--- a/dang nhap, dang ki/login.html
+++ b/dang nhap, dang ki/login.html
@@ -24,13 +24,13 @@
                 </div>
 
                 <div class="form-group my-2">
-                    <label for="password">Mật khẩu:</label>
+                    <label for="password">Password:</label>
                     <input type="password" class="form-control" id="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary ">Log in</button>
                 <a class="ms-4" href="register.html">Click here to create account</a>
             </form>
-            <img src="bg img/images.jpg" alt="">
+            <img class="mx-auto" src="bg img/images.jpg" alt="">
         </div>
     </div>
 
