--- a/index.html
+++ b/index.html
@@ -57,96 +57,8 @@
     </div>
 
     <div class="container">
-        <div class="productList row gy-2">
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Apple Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-128gb-vn-a-99-01685429112.jpg" class="card-img-top"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Apple iPhone 14 Pro Max 128GB VN/A Like New</h5>
-                        <span class="phone-Value text-primary">25000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">30000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="productItem card border-0 shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img src="card-img/apple-iphone-14-pro-max-256gb-01663051542.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Iphone 14 Pro Max 265GB VN/A</h5>
-                        <span class="phone-Value text-primary">29000000</span>
-                        <span class="phone-Exvalue text-decoration-line-through">32000000</span>
-                        <button class="btn btn-primary">Buy product</button>
-                    </div>
-                </div>
-            </div>
+        <div id="productList" class="productList row gy-2">
+
         </div>
         <div class="posts">
             <b>New Post</b>
@@ -211,7 +123,7 @@
         </div>
     </div>
 
-
+    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
         </script>
