--- a/dang nhap, dang ki/login.html
+++ b/dang nhap, dang ki/login.html
@@ -38,12 +38,13 @@
     <script>
         // Cấu hình thông tin Firebase
         var firebaseConfig = {
-            apiKey: "AIzaSyBRN1iOtvSX0mklpbKJfJzZSec-yzwQZNE",
-            authDomain: "webanhhang.firebaseapp.com",
-            projectId: "webanhhang",
-            storageBucket: "webanhhang.appspot.com",
-            messagingSenderId: "355080490934",
-            appId: "1:355080490934:web:c81d0c9cf5bc5c5e197b17"
+            apiKey: "AIzaSyDmgLIhrUVwygV86v_ULhR2MdZoDTFkeG4",
+            authDomain: "fir-jsi01-pxl.firebaseapp.com",
+            projectId: "fir-jsi01-pxl",
+            storageBucket: "fir-jsi01-pxl.appspot.com",
+            messagingSenderId: "367863332538",
+            appId: "1:367863332538:web:da23a8d35413692a758c83",
+
         };
 
         // Khởi tạo Firebase
