--- a/dang nhap, dang ki/register.html
+++ b/dang nhap, dang ki/register.html
@@ -17,24 +17,27 @@
 <body>
   <div class="body">
     <div class="container my-auto">
+
       <h2>Sign up</h2>
-      <div class="form-group my-2">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" required>
-      </div>
-      <div class="form-group my-2">
-        <label for="phone">Phone number:</label>
-        <input type="tel" class="form-control" id="phone" required>
-      </div>
-      <div class="form-group my-2">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <div class="form-group my-2">
-        <label for="address">Delivery address:</label>
-        <input type="text" class="form-control" id="address" required>
-      </div>
-      <button type="submit" class="btn btn-primary button"><b>Create Account</b></button>
+      <form id="signup-form">
+        <div class="form-group my-2">
+          <label for="email">Email:</label>
+          <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="form-group my-2">
+          <label for="phone">Phone number:</label>
+          <input type="tel" class="form-control" id="phone" required>
+        </div>
+        <div class="form-group my-2">
+          <label for="password">Password:</label>
+          <input type="password" class="form-control" id="password" required>
+        </div>
+        <div class="form-group my-2">
+          <label for="address">Delivery address:</label>
+          <input type="text" class="form-control" id="address" required>
+        </div>
+        <button type="submit" class="btn btn-primary button"><b>Create Account</b></button>
+      </form>
       <a class="ms-4" href="login.html">Already had an account? Click here</a>
 
     </div>
@@ -48,12 +51,13 @@
   <script>
     // Cấu hình thông tin Firebase
     var firebaseConfig = {
-      apiKey: "AIzaSyBRN1iOtvSX0mklpbKJfJzZSec-yzwQZNE",
-      authDomain: "webanhhang.firebaseapp.com",
-      projectId: "webanhhang",
-      storageBucket: "webanhhang.appspot.com",
-      messagingSenderId: "355080490934",
-      appId: "1:355080490934:web:c81d0c9cf5bc5c5e197b17"
+      apiKey: "AIzaSyDmgLIhrUVwygV86v_ULhR2MdZoDTFkeG4",
+      authDomain: "fir-jsi01-pxl.firebaseapp.com",
+      projectId: "fir-jsi01-pxl",
+      storageBucket: "fir-jsi01-pxl.appspot.com",
+      messagingSenderId: "367863332538",
+      appId: "1:367863332538:web:da23a8d35413692a758c83",
+
     };
 
     // Khởi tạo Firebase
