--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 
         </div>
 
-        <div class="offcanvas-footer">
+        <div class="offcanvas-footer" id="gioHang">
             <div class="total-money text-end">
                 <span class="fw-bold">Tổng tiền: </span>
                 <span id="total-money">0</span>
             </div>
-            <button class="btn btn-primary w-100">
+            <button id="orderButton" class="btn btn-primary w-100" onclick="order()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-wallet2 mx-2" viewBox="0 0 16 16">
                     <path
@@ -144,7 +144,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
         </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
