--- a/dang nhap, dang ki/login.html
+++ b/dang nhap, dang ki/login.html
@@ -38,12 +38,12 @@
     <script>
         // Cấu hình thông tin Firebase
         var firebaseConfig = {
-            apiKey: "AIzaSyDmgLIhrUVwygV86v_ULhR2MdZoDTFkeG4",
-            authDomain: "fir-jsi01-pxl.firebaseapp.com",
-            projectId: "fir-jsi01-pxl",
-            storageBucket: "fir-jsi01-pxl.appspot.com",
-            messagingSenderId: "367863332538",
-            appId: "1:367863332538:web:da23a8d35413692a758c83",
+            apiKey: "AIzaSyBPe5ohUcj9rEC8IBHjB8HEEOCnDR7Oztc",
+            authDomain: "spck-45ef3.firebaseapp.com",
+            projectId: "spck-45ef3",
+            storageBucket: "spck-45ef3.appspot.com",
+            messagingSenderId: "685428716353",
+            appId: "1:685428716353:web:0ff406a61bfdbad7c827c0"
 
         };
 
