--- a/dang nhap, dang ki/login.html
+++ b/dang nhap, dang ki/login.html
@@ -16,7 +16,7 @@
 <body>
     <div style="width: 500px;" class="mx-auto mt-5">
         <div class="container">
-            <h2>Log in</h2>
+            <h2>Đăng nhập</h2>
             <form id="signup-form">
                 <div class="form-group my-2">
                     <label for="email">Email:</label>
@@ -27,7 +27,7 @@
                     <label for="password">Password:</label>
                     <input type="password" class="form-control" id="password" required>
                 </div>
-                <button type="submit" class="btn btn-primary ">Log in</button>
+                <button type="submit" class="btn btn-primary " onclick="logOut()">Đăng nhập</button>
                 <a class="ms-4" href="register.html">Click here to create account</a>
             </form>
             <img class="mx-auto" src="bg img/images.jpg" alt="">
