--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </span>
                 </button>
             </div>
-            <a href="./dang nhap, dang ki/register.html">Register</a>
+            <a id="logOut" href="./dang nhap, dang ki/register.html">Register</a>
         </div>
     </nav>
 
@@ -127,6 +127,9 @@
             </button>
         </div>
     </div>
+    </div>
+    <div class="footer">
+
     </div>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
